--- a/clothes-project/src/app/shared/styles/shared-styles.scss
+++ b/clothes-project/src/app/shared/styles/shared-styles.scss
@@ -25,3 +25,16 @@
   background-repeat: no-repeat;
   background-position: center center;
 }
+
+@mixin storage-and-memory-buttons {
+  border: 2px solid #6c757d;
+  border-radius: 2px;
+  width: 50px;
+  text-align: center;
+  padding: 5px;
+  margin: 10px 10px 10px 0px;
+  span {
+    color: black;
+  }
+}
+
