--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.scss
@@ -20,14 +20,14 @@
     }
   }
 
-  .general-presentation {
+  .item-presentation {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 30px;
     user-select: none;
 
-    &__item-properties {
+    &__preview {
       p {
         margin: 0 auto;
         width: fit-content;
@@ -35,5 +35,32 @@
       }
     }
 
+    &__properties {
+      display: flex;
+      .benefits {
+        background-color: #6c757d;
+        color: white;
+        padding: 10px;
+        height: 200px;
+        width: 250px;
+        border-radius: 5px;
+        box-shadow: 2px 2px 10px -1px #1f1f1f;
+        margin: 10px 0;
+
+        h4 {
+          font-weight: 300;
+          text-transform: uppercase;
+          margin: 5px 0;
+        }
+
+        p {
+          position: relative;
+          span {
+            position: absolute;
+            top: 7px;
+          }
+        }
+      }
+    }
   }
 }
