--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-properties/select-item-properties.component.scss
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/select-item-properties/select-item-properties.component.scss
@@ -1,13 +1,13 @@
 @import '../../../../../../../../shared/styles/global-colors.scss';
+@import '../../../../../../../../shared/styles//shared-styles.scss';
 .item-colors {
   display: flex;
-  justify-content: center;
 
   .item-color {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px 10px;
+    margin: 5px 10px 0 0;
     border-radius: 3px;
     border: 1px solid #6c757d;
     padding: 5px;
@@ -26,5 +26,38 @@
 
   .custom-border {
     border: 1px solid $custom-border;
+  }
+}
+
+.property-text {
+  font-weight: 500;
+  margin: 10px 0;
+}
+
+.memory {
+  display: flex;
+  width: 200px;
+  flex-wrap: wrap;
+
+  .memory-option {
+    @include storage-and-memory-buttons;
+  }
+
+  .storage-option {
+    @include storage-and-memory-buttons;
+  }
+
+  .storage-option:hover {
+    cursor: pointer;
+  }
+
+  .memory-option:hover {
+    cursor: pointer;
+  }
+
+  .custom-border {
+    border: 2px solid $custom-border;
+    color: $custom-border;
+    font-weight: 500;
   }
 }
