specs are displayed in page

--- a/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
+++ b/clothes-project/src/app/modules/home/pages/home/home-list/home-list-item/home-list-item-details/home-list-item-details.component.html
@@ -48,5 +48,13 @@
         </div>
       </div>
     </section>
+    <div class="specs-table">
+      <app-phone-specs-table
+        *ngIf="item.type === 'mobilePhones'"
+      ></app-phone-specs-table>
+      <app-laptop-specs-table
+        *ngIf="item.type === 'laptops'"
+      ></app-laptop-specs-table>
+    </div>
   </ng-template>
 </div>
